[package]
name = "rss-from-tweets"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
http = "0.2.8"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
warp = "0.3.2"
