[package]
name = "rss-from-tweets"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"
maud = "0.23.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
twitter-v2 = "0.1.7"
